--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AdvancedTemplate"
         tools:targetApi="31">
         <activity
+            android:name=".AddTemplateActivity"
+            android:exported="false" />
+        <activity
             android:name=".TemplateActivity"
             android:exported="false" />
         <activity
@@ -27,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
